Fixed some spacing on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -12079,6 +12079,9 @@ footer a:hover, footer a:active, footer a:focus {
     height: 600px;
     padding: 4rem;
   }
+  .review-text {
+    margin-top: 20px;
+  }
 }
 @media(max-width:700px) {
   .large-review {
@@ -12104,6 +12107,10 @@ footer a:hover, footer a:active, footer a:focus {
     }
     .review-slider-container {
       margin-top: 10rem;
+    }
+
+    .review-text {
+      margin-top: 20px;
     }
   }
 
